# ChangeLog for dev-perl/Class-DBI
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-DBI/ChangeLog,v 1.52 2012/06/24 13:00:24 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -Class-DBI-3.0.16.ebuild:
  Cleanup

  01 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> Class-DBI-3.0.17.ebuild:
  ppc64 stable wrt #391581

  11 Dec 2011; Raúl Porcel <armin76@gentoo.org> Class-DBI-3.0.16.ebuild,
  Class-DBI-3.0.17.ebuild:
  Drop ia64/sparc keywords

  03 Dec 2011; Markos Chandras <hwoarang@gentoo.org> Class-DBI-3.0.17.ebuild:
  Stable on amd64 wrt bug #391581

  01 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> Class-DBI-3.0.17.ebuild:
  x86 stable wrt bug #391581

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org> Class-DBI-3.0.17.ebuild:
  Marked ~x86-solaris, bug #296509

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Class-DBI-3.0.16.ebuild,
  Class-DBI-3.0.17.ebuild:
  New virtuals: version

*Class-DBI-3.0.17 (30 Sep 2008)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Class-DBI-3.0.13.ebuild,
  -Class-DBI-3.0.15.ebuild, Class-DBI-3.0.16.ebuild,
  +Class-DBI-3.0.17.ebuild:
  Version bump. Cleanup

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Class-DBI-3.0.16.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Class-DBI-3.0.16.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Class-DBI-3.0.16.ebuild:
  Stable on IA64.

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Marking amd64 stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Class-DBI-3.0.16.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Class-DBI-3.0.14.ebuild, Class-DBI-3.0.16.ebuild:
  Marking amd64 stable

*Class-DBI-3.0.16 (06 Nov 2006)
