@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-DBI
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-DBI/ChangeLog,v 1.52 2012/06/24 13:00:24 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-DBI/ChangeLog,v 1.53 2013/08/25 08:35:22 idella4 Exp $
+
+*Class-DBI-3.0.17-r1 (25 Aug 2013)
+
+  25 Aug 2013; Ian Delaney <idella4@gentoo.org> +Class-DBI-3.0.17-r1.ebuild:
+  revbump -> EAPI 5
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
